# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "mongos-k8s"
version = "0.0.1-dev.0"
description = ""
license = "Apache-2.0"
authors = [
    "Mia Altieri <mia.altieri@canonical.com>"
]
readme = "README.md"
homepage = "https://charmhub.io/mongos-k8s?channel=6/edge"
repository = "https://github.com/canonical/mongos-k8s-operator"


[tool.poetry.dependencies]
python ="^3.10.12"
tenacity = "^8.2.3"
pymongo = "^4.6.3"
ops = "^2.4.1"
parameterized = "^0.9.0"
cffi = "^1.16.0"
pyopenssl = "^24.1.0"
cosl = "^ 0.0.11"
pure-sasl = ">=0.6.2"
jsonschema = ">=4.10"
cryptography = "^42.0.5"
poetry= "^1.8.2"
pydantic ="^1.10.7"
pyyaml = "^6.0.1"
jinja2= "^3.1.3"
rpds-py = "0.18.0"


[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-copyright = "^0.2.4"
flake8-builtins = "^2.5.0"
pyproject-flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
codespell = "^2.2.6"
shellcheck-py = "^0.10.0.1"
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.group.unit.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.integration.dependencies]
pytest = "^7.4.3"
pytest-operator = "^0.28.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v8.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v8.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
pytest-asyncio ="^0.17"
tenacity = "^8.1.0"
pymongo = "^4.3.3"
ops = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv", "tests/integration/relation_tests/application-charm/lib/", "tests/integration/ha_tests/application_charm/lib/"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
